# image-processor

./: .gitignore  CLAUDE.md  README.md  db_init_script.py  image_descriptions.db  image_sanitize_meta_processor.py  image_sanitize_meta_processor_dev.py  installation.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  todo.md
.claude/: settings.local.json
.history/: README_20241216200307.md  README_20241216200332.md  README_20241216200413.md
config/: meta_config.yaml  name_config.yaml
data/: descriptions.db
docs/: llava-capibilities.md  python-coder-system-prompt.md
image_processor_name/: README.md  pyproject.toml
image_processor_name/src/image_processor_name/: __init__.py  __main__.py  exceptions.py  main.py
image_processor_name/src/image_processor_name/api/: __init__.py  ollama_client.py
image_processor_name/src/image_processor_name/core/: renamer.py
image_processor_name/src/image_processor_name/tools/: __init__.py  config_manager.py  file_operations.py  log_manager.py
kanban/: kanban-image-indexer.md  kanban-image-processor.md
plans/: consolidate-tools-plan.md
plans/done/: new-test-suite-plan.md
src/image_meta_processor/: __main__.py  exceptions.py  main.py
src/image_meta_processor/api/: __init__.py
src/image_meta_processor/db/: manager.py
src/image_meta_processor/tools/: __init__.py  config_manager.py  log_manager.py
src/image_processor/: __init__.py
src/image_processor_meta/: __init__.py  __main__.py  main.py  processor.py
src/image_processor_meta/api/: ollama_client.py
src/image_processor_meta/db/: __init__.py  manager.py
src/image_processor_meta/tools/: config_manager.py  log_manager.py
src/image_processor_name/: __init__.py  __main__.py  config_manager.py  exceptions.py  file_operations.py  log_manager.py  main.py  ollama_client.py  renamer.py
src/image_processor_name/api/: ollama_client.py
src/image_processor_name/core/: __init__.py  renamer.py
src/image_processor_name/tools/: __init__.py  config_manager.py  file_operations.py
tests/: __init__.py  conftest.py  create_test_images.py  test_core.py  test_integration.py
tests/fixtures/sample_configs/: name_config_edge_cases.yaml  name_config_test.yaml
tests/fixtures/sample_images/: README.md
tests/integration/: test_ollama_integration.py
tests/integration/name/: __init__.py  test_name_workflow.py  test_ollama_integration.py
tests/unit/: test_database.py  test_processor.py
tests/unit/name/: __init__.py  test_config_manager.py  test_file_operations.py  test_main.py  test_ollama_client.py  test_renamer.py
todo/: todo-image-processor.md
